# hashreduce

./: .gitignore  CMakeLists.txt  LICENSE.txt  README
cmake/: CheckInt128.cmake  CheckRestrict.cmake  CheckStructRestrict.cmake  CheckTypeSize.cmake
doc/: conf.py  download.rst  index.rst  license.rst
doc/_templates/: layout-old.html
examples/: populations.c
src/: CMakeLists.txt  bitops.h  coding_conventions.txt  debugging.h  dgl.h  dglstructures.c  dglstructures.h  errorhandling.c  errorhandling.h  graphnode.h  graphstructure.h  hashkey_inline.h  hashkeys.c  hashkeys.h  hashobject.c  hashobject.h  hashobject.s  hashobject_inline.h  hashreduce.c  hashreduce.h  hashreduce_inline.h  hashtable.c  hashtable.h  hashtable_inline.h  hashtable_new.c  ibd.h  ibd_compare.c  ibd_compare.pyx  ibd_compare_c.c  ibd_fatpack.c  ibdstructures.c  ibdstructures.h  ksort.h  markerinfo.c  markerinfo.h  markerinfo_inline.h  memorypool.c  memorypool.h  mtrandbasic.c  mtrandbasic.h  (+9 more)
tests/: common.py  dglcreation.py  ibdcreation.py  parsers.py  test_dglstructures.py  test_hashkeys.py  test_hashtable.py  test_ibdstructures.py  test_markers.py  tests.py
tests/datafiles/: #test_dgl_1.dglf1#  test01.dglf1  test_dgl_1.dglf1  test_dgl_2.dglf1
